fixes an issue were objects push out of container rather then scaling container

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -9,13 +9,13 @@ body {
 
 #app {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .outerContainer {
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -24,13 +24,15 @@ body {
 .desktop {
     width: 100%;
     height: 100%;
+    min-height: 0;
     display: flex;
+    flex: 1;
 }
 
 .displayDataContainer {
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     padding: 40px;
     display: flex;
     flex-direction: column;
